[gd_scene load_steps=7 format=2]

[ext_resource path="res://common/game/Player.gd" type="Script" id=1]
[ext_resource path="res://common/game/WeaponListener.gd" type="Script" id=2]
[ext_resource path="res://common/game/PlayerCollider.gd" type="Script" id=3]
[ext_resource path="res://assets/players/green_player.tres" type="SpriteFrames" id=5]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0
height = 25.0

[node name="Player" type="KinematicBody2D"]
show_behind_parent = true
collision_mask = 2147483673
script = ExtResource( 1 )

[node name="WorldCollider" type="CollisionShape2D" parent="."]
position = Vector2( 2, 25 )
rotation = 1.5708
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 1 )

[node name="NameLabel" type="Label" parent="."]
margin_left = -73.0004
margin_top = 35.9546
margin_right = 72.9998
margin_bottom = 85.9546
text = "Name"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Weapon"]
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
color = Color( 1, 0.890196, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerAnim" type="AnimatedSprite" parent="."]
position = Vector2( 7.64645, -16 )
scale = Vector2( 0.1, 0.1 )
frames = ExtResource( 5 )
animation = "walk_right"
frame = 1

[node name="ProgressBars" type="Node2D" parent="."]
position = Vector2( 0, 60 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="KnockbackTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="InteractiveKinematicBody" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 2147483654
script = ExtResource( 3 )

[node name="InteractiveCollider" type="CollisionShape2D" parent="InteractiveKinematicBody"]
position = Vector2( 3, -2 )
shape = SubResource( 2 )
